// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayTrips matches snapshot for my trips 1`] = `
<div
  className="displayTripsContainer"
>
  <Memo(BackTop) />
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="start"
  >
    <Col
      lg={
        Object {
          "span": 3,
        }
      }
      md={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 5,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 18,
        }
      }
      md={
        Object {
          "span": 20,
        }
      }
      xl={
        Object {
          "span": 16,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 14,
        }
      }
    >
      <Title>
        Your memorable travels and memories
      </Title>
    </Col>
    <Col
      lg={
        Object {
          "span": 3,
        }
      }
      md={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 5,
        }
      }
    />
  </Row>
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="center"
  >
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 16,
        }
      }
      md={
        Object {
          "span": 18,
        }
      }
      xl={
        Object {
          "span": 14,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 12,
        }
      }
    >
      <Skeleton
        active={true}
        avatar={false}
        loading={true}
        paragraph={true}
        title={true}
      />
    </Col>
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
  </Row>
  <Modal
    bodyStyle={
      Object {
        "height": "500px",
      }
    }
    confirmLoading={false}
    footer={
      Array [
        <ForwardRef(InternalButton)
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="primary"
        >
          Close
        </ForwardRef(InternalButton)>,
      ]
    }
    maskClosable={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Trip locations"
    transitionName="zoom"
    visible={false}
    width="500px"
  >
    <MyMapContainer
      mapCenterLat={40.73061}
      mapCenterLng={-73.935242}
      searchMode={false}
      tripLocations={null}
    />
  </Modal>
</div>
`;

exports[`DisplayTrips matches snapshot for public trips 1`] = `
<div
  className="displayTripsContainer"
>
  <Memo(BackTop) />
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="start"
  >
    <Col
      lg={
        Object {
          "span": 3,
        }
      }
      md={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 5,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 18,
        }
      }
      md={
        Object {
          "span": 20,
        }
      }
      xl={
        Object {
          "span": 16,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 14,
        }
      }
    >
      <Title>
        Stories and footmarks from travelers in the world
      </Title>
    </Col>
    <Col
      lg={
        Object {
          "span": 3,
        }
      }
      md={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 4,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 5,
        }
      }
    />
  </Row>
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="center"
  >
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 16,
        }
      }
      md={
        Object {
          "span": 18,
        }
      }
      xl={
        Object {
          "span": 14,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 12,
        }
      }
    >
      <Skeleton
        active={true}
        avatar={false}
        loading={true}
        paragraph={true}
        title={true}
      />
    </Col>
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
  </Row>
  <Modal
    bodyStyle={
      Object {
        "height": "500px",
      }
    }
    confirmLoading={false}
    footer={
      Array [
        <ForwardRef(InternalButton)
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="primary"
        >
          Close
        </ForwardRef(InternalButton)>,
      ]
    }
    maskClosable={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Trip locations"
    transitionName="zoom"
    visible={false}
    width="500px"
  >
    <MyMapContainer
      mapCenterLat={40.73061}
      mapCenterLng={-73.935242}
      searchMode={false}
      tripLocations={null}
    />
  </Modal>
</div>
`;
